--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fideloper/proxy": "^4.4",
         "laravel/framework": "^6.20",
         "laravel/tinker": "^2.5",
-        "munafio/chatify": "^1.0"
+        "munafio/chatify": "^1.0",
+        "twilio/sdk": "^6.23"
     },
     "require-dev": {
         "facade/ignition": "^1.16.4",
