add example env

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,8 @@ PUSHER_APP_CLUSTER=ap2
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TWILIO_ACCOUNT_SID="AC0236bd14a8c9aa21b5d1a6f9ffaee404"
+TWILIO_API_KEY_SID="SKa122d059231317dc51332276876d5fe5"
+TWILIO_API_KEY_SECRET="tfwaYpRDg2gjy3Hdzegs4QEierkc6z6P"
+
